syntax = "proto3";

package messaging;

/*
gRPC for Data layer of Scalog
*/
service Data {
	rpc Append (AppendRequest) returns (AppendResponse) {}

	rpc Replicate (stream ReplicateRequest) returns (ReplicateResponse) {}

	rpc Subscribe (SubscribeRequest) returns (stream SubscribeResponse) {}

	rpc Trim (TrimRequest) returns (TrimResponse) {}

	rpc Read (ReadRequest) returns (ReadResponse) {}
}

message AppendRequest {
	int32 cid = 1;
	int32 csn = 2;
	string record = 3;
}

message AppendResponse {
	int32 csn = 1;
	int32 gsn = 2;
	int32 viewID = 3;
}

message ReplicateRequest {
	int32 serverID = 1;
	string record = 2;
}

// No response needed. In event of failure, we should finalize everything
message ReplicateResponse {}

message SubscribeRequest {
	int32 subscription_gsn = 1;
}

message SubscribeResponse {
	int32 gsn = 1;
	string record = 2;
	int32 viewID = 3;
}

message TrimRequest {
	int32 gsn = 1;
}

message TrimResponse {
	int32 viewID = 1;
}

message ReadRequest {
	int32 gsn = 1;
}

message ReadResponse {
	string record = 1;
	int32 viewID = 2;
}
