syntax = "proto3";

package rpc;

/*
gRPC for Discovery of Scalog

Queries should return the list of live data servers of Scalog. 
*/
service Discovery {
	rpc DiscoverServers (DiscoverRequest) returns (DiscoverResponse) {}
}

message DiscoverRequest {}

message DiscoverResponse {
	repeated DataServer servers = 1;
}

message DataServer {
	int32 serverID = 1;
	int32 shardID = 2;
	int32 port = 3;
	string ip = 4;
}
